--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 body {
     font-family: 'Raleway-regular', sans-serif ;
 }
-
-header {
+                                                /*police définie*/
+header {                                /*mise en page en-tête*/
     display: flex;
     justify-content: space-between;
 }
@@ -25,4 +25,36 @@ nav li {
 
 #logo {
     height: 60px;
+}
+                                    /*fin de l'en-tête*/
+main {
+    margin-top: 30px;
+}
+
+h1 + p {
+    font-size:0.9rem;
+}
+
+/*barre de recherche*/
+
+/*filtres*/
+
+#filtres {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.filtre {
+    display: flex;
+    width: 10%;
+    margin-left: 40px;
+}
+
+#info {
+    display: flex;
+}
+
+#info p {
+    font-size: 0.9rem;
 }
