--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@
 body {
     font-family: 'Raleway-regular', sans-serif ;
 }
-                                                /*police définie*/
-header {                                /*mise en page en-tête*/
+/*police définie*/
+
+
+/*en-tête*/
+
+header {                                
     display: flex;
     justify-content: space-between;
 }
@@ -26,7 +30,19 @@ nav li {
 #logo {
     height: 60px;
 }
-                                    /*fin de l'en-tête*/
+
+
+
+/*logos*/
+
+.fas {
+    color:rgb(45, 112, 255);
+   
+}
+
+
+/*corps de page*/
+
 main {
     margin-top: 30px;
 }
@@ -35,7 +51,11 @@ h1 + p {
     font-size:0.9rem;
 }
 
+
 /*barre de recherche*/
+
+
+
 
 /*filtres*/
 
@@ -57,4 +77,110 @@ h1 + p {
 
 #info p {
     font-size: 0.9rem;
+}
+
+
+/*partie hébergements*/
+
+#section-milieu {
+    display: flex;
+    justify-content: space-between;
+}
+
+#hebergements {
+    background-color: rgb(238, 238, 238);
+    border-radius: 20px;
+    padding: 30px;
+    width: 65%;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#hebergements img {
+    object-fit: cover;
+    width: 350px;
+    height: 175px; 
+}
+
+.logement {
+    background-color: white;
+    border-radius: 20px;
+    padding: 10px;
+    width: 350px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.logements {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+}
+
+.description {
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+h2 {
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+/*les plus populaires*/
+
+aside {
+    background-color: rgb(238, 238, 238);
+    border-radius: 20px;
+    padding: 30px;
+    width: 25%;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+aside img {
+    object-fit: cover;
+    width: 120px;
+    height: 150px;
+}
+
+#titre-aside {
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+    margin-top: 20px;
+}
+
+.populaire {
+    background-color: white;
+    border-radius: 20px;
+    padding: 10px;
+    margin-top: 15px;
+    margin-bottom: 35px;
+    width: 450px;
+    height: 150px;
+    display: flex;
+}
+
+.description-2 {
+    margin-top: 0px;
+    margin-left: 40px;
+}
+
+#etoiles {
+    margin-top: 35px;
+}
+
+#populaires {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 5px;
 }
