--- a/style.css
+++ b/style.css
@@ -20,7 +20,15 @@ header {
 
 nav ul {
     list-style-type: none;
+}
+
+nav {
     display: flex;
+}
+
+#nav-ancres {
+    display: flex;
+    margin-right: -50px;
 }
 
 nav li {
@@ -33,10 +41,13 @@ header strong {
 
 #logo {
     height: 60px;
+    margin-left: 40px;
+    margin-top: 20px;
 }
 
 header a:hover {
     border-top: 2px #0065FC solid;
+    color: #0065FC;
     padding-top: 20px;
 }
 
@@ -45,13 +56,15 @@ header a:hover {
 
 main {
     margin-top: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 h1 + p {
     font-size:0.9rem;
 }
 
-h1 {
+h1, h2 {
     font-size: 1.5rem;
 }
 
@@ -67,19 +80,23 @@ a {
 
 /*barre de recherche*/
 
-#barre-recherche .fas {
-    background-color:rgba(51, 51, 51, 0.199);
+#icone-map {
+    background-color:rgba(51, 51, 51, 0.11);
     width: 50px;
     height: 35px;
     font-size: 1.2rem;
     border-radius: 15px 0px 0px 15px;
     text-align: center;
-    padding-top: 14px;  
+    padding-top: 15px;  
+    padding-bottom: 3px;
+    padding-left: 2px;
 }
 
 #barre-saisie {
+    border: 1px rgba(0, 0, 0, 0.212) solid;
     width: 175px;
-    height: 49px;
+    height: 52px;
+    margin-left:-5px;
 }
 
 #bouton-rechercher-mobile {
@@ -89,10 +106,11 @@ a {
 #bouton-rechercher-desktop {
     background-color: #0065FC;
     color: white;
-    height: 50px;
+    height: 53px;
     width: 100px;
     border-radius: 0px 15px 15px 0px;
     font-weight: bold;
+    margin-left:-6px;
 }
 
 
@@ -112,7 +130,7 @@ a {
     display: flex;
     height: 50px;
     margin-left: 40px;
-    border: 0.5px rgba(0, 0, 0, 0.295) solid;
+    border: 0.1px rgba(0, 0, 0, 0.295) solid;
     border-radius: 25px;
     padding-right: 25px;
 }
@@ -163,7 +181,6 @@ a {
     border-radius: 20px;
     padding: 30px;
     width: 1200px;
-    height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -180,7 +197,7 @@ a {
 .logement {
     background-color: white;
     border-radius: 30px;
-    border: 3px ridge rgba(77, 77, 77, 0.15);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.233);
     padding: 5px;
     width: 350px;
     margin-top: 15px;
@@ -200,7 +217,7 @@ a {
     margin-bottom: 10px;
 }
 
-h2 {
+h3 {
     font-size: 1.2rem;
     margin-top: 10px;
     margin-bottom: 0px;
@@ -213,7 +230,7 @@ aside {
     border-radius: 20px;
     padding: 30px;
     width: 500px;
-    height: 800px;
+    max-height: 775px;
     margin-left: 70px;
     display: flex;
     flex-direction: column;
@@ -242,12 +259,11 @@ aside img {
 .populaire {
     background-color: white;
     border-radius: 30px;
-    border: 3px ridge rgba(77, 77, 77, 0.15);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.233);
     padding: 5px;
     margin-top: 15px;
     margin-bottom: 35px;
     width: 450px;
-    height: 150px;
     display: flex;
 }
 
@@ -264,7 +280,6 @@ aside img {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    margin-bottom: 5px;
 }
 
 
@@ -277,36 +292,24 @@ aside img {
 #activites img {
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
-    width: 430px;
+    width: 420px;
 }
 
 figure {
-    border: 1px rgba(0, 0, 0, 0.219) solid;
     border-radius: 20px;
-    border: 3px ridge rgba(77, 77, 77, 0.15);
-    padding: 0px;
-    margin-right: 20px;
-    margin-left: 20px;
-    width: 430px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.233);
+    margin-left: 0px;
 }
 
 figcaption {
     margin-top: 10px;
     margin-left: 20px;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     font-weight: bold;
-}
-
-.figure-verticale {
-    height: 700px;
 }
 
 .figure-verticale img {
     height: 650px;
-}
-
-.figure-horizontale {
-    height: 350px;
 }
 
 .figure-horizontale img {
@@ -323,7 +326,7 @@ footer {
     margin-top: 60px;
 }
 
-h3 {
+h4 {
     margin-left: 40px;
 }
 
@@ -346,6 +349,31 @@ footer li {
 
 /*réagencement menu navigation*/
 
+#nav-ancres {
+    margin-top: 100px;
+    margin-left: -150px;
+}
+
+nav li {
+    font-size: 1.2rem;
+    width:100px;
+    margin-left: -100px;
+}
+
+#nav-ancres li {
+    padding-bottom: 20px;
+    padding-left:100px;
+    padding-right:100px;
+    border-bottom: 4px #94949433 solid;
+    
+}
+
+#nav-ancres li :hover {
+    border-bottom: 4px #0065FC solid;
+    padding-bottom: 20px;
+    border-top: none;
+    color: #0065FC;
+}
 
 
 /*refonte bouton rechercher*/
@@ -357,16 +385,33 @@ footer li {
 
 #bouton-rechercher-mobile {
     display: initial;
-    background-color: #0065FC;
+}
+
+#bouton-rechercher-mobile .fas {
+    position: relative;
     color: white;
-    height: 50px;
+    font-size: 1.2rem;
+    padding-top: 15px;  
+    padding-bottom: 3px;
+    padding-left: 10px;
+}
+
+#bouton-rechercher-mobile input {
+    position: absolute;
     width: 50px;
-    border-radius: 15px 15px 15px 15px;
-    font-weight: bold;
+    height: 53px;
+    border: 0px rgba(0, 0, 0, 0) solid;
+    background-color: #0065FC;
+    border-radius: 0px 15px 15px 0px;
+    margin-left: -5px;
 }
 
 
 /*réagencement filtres*/
+
+#titre-filtres {
+    min-width: 100%;
+}
 
 #filtres {
     flex-wrap: wrap;
@@ -386,7 +431,7 @@ footer li {
 
 aside {
     border-radius: 0px;
-    margin-left: 0px;
+    margin-left: -20px;
     width: 100%;
 }
 
@@ -398,8 +443,33 @@ aside {
     flex-direction: column;
 }
 
+figure img {
+    min-width: 100%;
+    max-height: 350px;
+}
 
-/*réagencement du pied de page*/
+figure {
+    margin-top: 30px;
+}
+
+
+/*réagencement du pied de page, pour width compris entre 700 et 1080px*/
+
+footer {
+    padding-left: 0px;
+}
+
+footer ul {
+    margin-right: 0px;
+}
+
+
+}
+
+
+@media screen and (max-width: 700px) {
+
+/*réagencement du pied de page, pour width < 700px */
 
 footer {
     flex-direction: column;
