Ajustement pour des résolutions intermédiaires

--- a/style.css
+++ b/style.css
@@ -345,67 +345,7 @@ footer li {
 /*passage en responsive*/
 
 @media screen and (max-width: 1080px) {
-
-
-/*réagencement menu navigation*/
-
-#nav-ancres {
-    margin-top: 100px;
-    margin-left: -150px;
-}
-
-nav li {
-    font-size: 1.2rem;
-    width:100px;
-    margin-left: -100px;
-}
-
-#nav-ancres li {
-    padding-bottom: 20px;
-    padding-left:100px;
-    padding-right:100px;
-    border-bottom: 4px #94949433 solid;
-    
-}
-
-#nav-ancres li :hover {
-    border-bottom: 4px #0065FC solid;
-    padding-bottom: 20px;
-    border-top: none;
-    color: #0065FC;
-}
-
-
-/*refonte bouton rechercher*/
-
-#bouton-rechercher-desktop {
-    display: none;
-}
-
-
-#bouton-rechercher-mobile {
-    display: initial;
-}
-
-#bouton-rechercher-mobile .fas {
-    position: relative;
-    color: white;
-    font-size: 1.2rem;
-    padding-top: 15px;  
-    padding-bottom: 3px;
-    padding-left: 10px;
-}
-
-#bouton-rechercher-mobile input {
-    position: absolute;
-    width: 50px;
-    height: 53px;
-    border: 0px rgba(0, 0, 0, 0) solid;
-    background-color: #0065FC;
-    border-radius: 0px 15px 15px 0px;
-    margin-left: -5px;
-}
-
+                                /*pour width entre 700 et 1080px*/
 
 /*réagencement filtres*/
 
@@ -453,7 +393,7 @@ figure {
 }
 
 
-/*réagencement du pied de page, pour width compris entre 700 et 1080px*/
+/*réagencement du pied de page*/
 
 footer {
     padding-left: 0px;
@@ -468,8 +408,69 @@ footer ul {
 
 
 @media screen and (max-width: 700px) {
+                                /*pour width < 700px*/ 
 
-/*réagencement du pied de page, pour width < 700px */
+/*réagencement menu navigation*/
+
+#nav-ancres {
+    margin-top: 100px;
+    margin-left: -150px;
+}
+
+nav li {
+    font-size: 1.2rem;
+    width:100px;
+    margin-left: -180px;
+}
+
+#nav-ancres li {
+    padding-bottom: 20px;
+    padding-left:150px;
+    padding-right:150px;
+    border-bottom: 4px #94949433 solid;
+    
+}
+
+#nav-ancres li :hover {
+    border-bottom: 4px #0065FC solid;
+    padding-bottom: 20px;
+    border-top: none;
+    color: #0065FC;
+}
+
+
+/*refonte bouton rechercher*/
+
+#bouton-rechercher-desktop {
+    display: none;
+}
+
+
+#bouton-rechercher-mobile {
+    display: initial;
+}
+
+#bouton-rechercher-mobile .fas {
+    position: relative;
+    color: white;
+    font-size: 1.2rem;
+    padding-top: 15px;  
+    padding-bottom: 3px;
+    padding-left: 10px;
+}
+
+#bouton-rechercher-mobile input {
+    position: absolute;
+    width: 50px;
+    height: 53px;
+    border: 0px rgba(0, 0, 0, 0) solid;
+    background-color: #0065FC;
+    border-radius: 0px 15px 15px 0px;
+    margin-left: -5px;
+}
+
+
+/*réagencement du pied de page*/
 
 footer {
     flex-direction: column;
