--- a/style.css
+++ b/style.css
@@ -658,6 +658,11 @@ footer {
 
     .populaire {
         display: block;
+        height: initial;
+    }
+
+    .populaire img {
+        width: 100%;
     }
     
     aside img {
