--- a/style.css
+++ b/style.css
@@ -241,8 +241,7 @@ aside {
 
 aside img {
     object-fit: cover;
-    min-width: 200px;
-    max-width: 200px;
+    width: 200px;
     height: 200px;
     border-radius: 25px 0px 0px 25px;
 }
@@ -274,12 +273,6 @@ aside img {
 
 #populaires {
     margin-top: 30px;
-}
-
-@media (min-width:1685px) {
-    #populaires .fas {
-        margin-top: 65px;
-    }
 }
 
 
@@ -470,7 +463,6 @@ aside {
 
 aside img {
     height: 200px;
-    min-width: 300px;
 }
 
 h3 {
@@ -521,10 +513,6 @@ h3 + p {
 
 
 @media (max-width: 1010px) {
-
-aside img {
-    min-width: 200px;
-}
 
 /*passage des activités en colonne*/
 
