--- a/style.css
+++ b/style.css
@@ -241,7 +241,8 @@ aside {
 
 aside img {
     object-fit: cover;
-    width: 200px;
+    min-width: 200px;
+    max-width: 200px;
     height: 200px;
     border-radius: 25px 0px 0px 25px;
 }
@@ -273,6 +274,12 @@ aside img {
 
 #populaires {
     margin-top: 30px;
+}
+
+@media (min-width:1685px) {
+    #populaires .fas {
+        margin-top: 65px;
+    }
 }
 
 
@@ -463,6 +470,7 @@ aside {
 
 aside img {
     height: 200px;
+    min-width: 300px;
 }
 
 h3 {
@@ -513,6 +521,10 @@ h3 + p {
 
 
 @media (max-width: 1010px) {
+
+aside img {
+    min-width: 200px;
+}
 
 /*passage des activités en colonne*/
 
